add home activity and track activity

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,4 +7,14 @@
     tools:context="greenstory.rtg.com.HomeActivity">
 
 
+    <Button
+        android:id="@+id/map1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="144dp"
+        android:layout_weight="1"
+        android:text="map1" />
+
 </RelativeLayout>
