--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -7,24 +7,23 @@
     tools:context="greenstory.rtg.com.UserActivity"
     android:orientation="vertical">
 
-    <LinearLayout
-
-        android:id="@+id/name_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
         <TextView
             android:id="@+id/tv_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="שם" />
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="30dp"
+            android:text="שם"
+            android:textSize="22sp" />
 
         <EditText
             android:id="@+id/et_name"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/tv_name" />
+            android:layout_alignBaseline="@+id/tv_name"
+            android:layout_gravity="left"
+            android:layout_toLeftOf="@+id/tv_name"
+            android:textSize="22sp" />
 
-    </LinearLayout>
 
 </RelativeLayout>
