--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,17 +7,43 @@
     tools:context="greenstory.rtg.com.UserActivity"
     android:orientation="vertical">
 
+    <LinearLayout
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/et_name"
+            android:layout_width="351dp"
+            android:layout_height="wrap_content"
+            android:layoutDirection="rtl"
+            android:textDirection="rtl"
+            android:textSize="22sp" />
+
         <TextView
             android:id="@+id/tv_name"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="שם"
+            android:textSize="22sp" />
+
+
+    </LinearLayout>
+
+
+
+    <TextView
+            android:id="@+id/tv_familyName"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:layout_alignParentRight="true"
             android:layout_marginTop="30dp"
-            android:text="שם"
+            android:text="שם משפחה"
             android:textSize="22sp" />
 
         <EditText
-            android:id="@+id/et_name"
+            android:id="@+id/et_familyName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/tv_name"
@@ -25,5 +51,64 @@
             android:layout_toLeftOf="@+id/tv_name"
             android:textSize="22sp" />
 
+        <TextView
+            android:id="@+id/tv_partnerName"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="30dp"
+            android:text="בן זוג"
+            android:textSize="22sp" />
 
-</RelativeLayout>
+        <EditText
+            android:id="@+id/et_partnerName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/tv_name"
+            android:layout_gravity="left"
+            android:layout_toLeftOf="@+id/tv_name"
+            android:textSize="22sp" />
+
+        <TextView
+            android:id="@+id/tv_age"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="30dp"
+            android:text="גיל"
+            android:textSize="22sp" />
+
+        <EditText
+            android:id="@+id/et_age"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/tv_name"
+            android:layout_gravity="left"
+            android:layout_toLeftOf="@+id/tv_name"
+            android:textSize="22sp" />
+
+        <TextView
+            android:id="@+id/tv_partnerAge"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="30dp"
+            android:text="גיל בן זוג"
+            android:textSize="22sp" />
+
+        <EditText
+            android:id="@+id/et_partnerAge"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/tv_name"
+            android:layout_gravity="left"
+            android:layout_toLeftOf="@+id/tv_name"
+            android:textSize="22sp" />
+
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="משפחה" />
+
+
+</LinearLayout>
