--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -7,108 +7,54 @@
     tools:context="greenstory.rtg.com.UserActivity"
     android:orientation="vertical">
 
-    <LinearLayout
-
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <EditText
             android:id="@+id/et_name"
-            android:layout_width="351dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:hint="שם"
             android:layoutDirection="rtl"
             android:textDirection="rtl"
-            android:textSize="22sp" />
+            android:textSize="22sp"
+            android:visibility="invisible"
+            android:layout_marginTop="16dp"/>
 
         <TextView
             android:id="@+id/tv_name"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="שם"
-            android:textSize="22sp" />
-
-
-    </LinearLayout>
-
-
-
-    <TextView
-            android:id="@+id/tv_familyName"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:layout_alignParentRight="true"
-            android:layout_marginTop="30dp"
-            android:text="שם משפחה"
-            android:textSize="22sp" />
-
-        <EditText
-            android:id="@+id/et_familyName"
-            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/tv_name"
-            android:layout_gravity="left"
-            android:layout_toLeftOf="@+id/tv_name"
-            android:textSize="22sp" />
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:layout_margin="16dp"
+            android:layoutDirection="rtl"
+            android:text="שם:"
+            android:textDirection="rtl"
+            android:textSize="22sp"
+            android:visibility="visible" />
 
         <TextView
-            android:id="@+id/tv_partnerName"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:layout_alignParentRight="true"
-            android:layout_marginTop="30dp"
-            android:text="בן זוג"
-            android:textSize="22sp" />
-
-        <EditText
-            android:id="@+id/et_partnerName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/tv_name"
-            android:layout_gravity="left"
-            android:layout_toLeftOf="@+id/tv_name"
-            android:textSize="22sp" />
-
-        <TextView
-            android:id="@+id/tv_age"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:layout_alignParentRight="true"
-            android:layout_marginTop="30dp"
-            android:text="גיל"
-            android:textSize="22sp" />
-
-        <EditText
-            android:id="@+id/et_age"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/tv_name"
-            android:layout_gravity="left"
-            android:layout_toLeftOf="@+id/tv_name"
-            android:textSize="22sp" />
-
-        <TextView
-            android:id="@+id/tv_partnerAge"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:layout_alignParentRight="true"
-            android:layout_marginTop="30dp"
-            android:text="גיל בן זוג"
-            android:textSize="22sp" />
-
-        <EditText
-            android:id="@+id/et_partnerAge"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/tv_name"
-            android:layout_gravity="left"
-            android:layout_toLeftOf="@+id/tv_name"
-            android:textSize="22sp" />
-
-        <CheckBox
+            android:id="@+id/tv_name_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="משפחה" />
+            android:layout_toLeftOf="@id/tv_name"
+            android:text="אלעד קורן"
+            android:textSize="22sp"
+            android:layout_marginTop="16dp"
+            android:visibility="visible"
+            />
 
+    </RelativeLayout>
+
+    <Button
+        android:id="@+id/btn_edit_fields"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="עריכה"/>
 
 </LinearLayout>
