--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -12,6 +12,14 @@
         android:layout_height="match_parent">
 
         <Button
+            android:id="@+id/btn_delete_db"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="deleteDB"
+            android:textSize="22sp" />
+
+        <Button
             android:id="@+id/goToMaps"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
