started working on map activity: handling location permissions

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,16 +7,16 @@
     android:orientation="vertical"
     tools:context="greenstory.rtg.com.HomeActivity">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
         <Button
             android:id="@+id/btn_delete_db"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/goToMaps"
-            android:layout_centerHorizontal="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginEnd="17dp"
+            android:layout_marginRight="17dp"
+            android:layout_marginTop="28dp"
             android:gravity="center"
             android:text="Delete DB" />
 
@@ -24,8 +24,11 @@
             android:id="@+id/goToMaps"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/btn_delete_db"
+            android:layout_marginLeft="86dp"
+            android:layout_marginStart="86dp"
             android:text="open map" />
 
         <ScrollView
@@ -43,10 +46,6 @@
 
             </LinearLayout>
 
-
         </ScrollView>
-
-    </RelativeLayout>
-
 
 </LinearLayout>
