--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -12,41 +12,36 @@
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        <!-- As the main content view, the view below consumes the entire
+     space available using match_parent in both dimensions. -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
-        <!-- As the main content view, the view below consumes the entire
-             space available using match_parent in both dimensions. -->
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:weightSum="2">
-
-
+            android:orientation="horizontal"
+            android:weightSum="1"
+            android:baselineAligned="false">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
-                    android:layout_weight="1">
+                    android:layout_weight="0.5">
 
                     <ImageView
                         android:padding="5dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/shvil_map"/>
+                        android:src="@drawable/shvil_map"
+                        android:contentDescription="israel map" />
 
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:layout_weight="0.5"
                     android:orientation="vertical"
-                    android:weightSum="2">
+                    android:weightSum="1">
 
 
                     <TextView
@@ -54,10 +49,11 @@
                         android:id="@+id/RTG_info"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="0.5"
                         android:gravity="start"
                         android:text="מי שמטייל יותר, נהנה יותר וזוכה יותר!"
-                        android:textSize="22sp" />
+                        android:textColor="@color/rtgGreen"
+                        android:textSize="@dimen/text_medium" />
 
 
 
@@ -66,7 +62,7 @@
                         android:id="@+id/lv_users"
                         android:layout_width="match_parent"
                         android:layout_height="220dp"
-                        android:layout_weight="1">
+                        android:layout_weight="0.5">
 
                     </ListView>
 
@@ -74,8 +70,6 @@
                 </LinearLayout>
 
             </LinearLayout>
-
-        </LinearLayout>
 
 
         <!-- android:layout_gravity="start" tells DrawerLayout to treat
@@ -91,8 +85,9 @@
             android:layout_gravity="end"
             android:choiceMode="singleChoice"
             android:divider="@android:color/transparent"
+
             android:dividerHeight="0dp"
-            android:background="#111"/>
+            android:background="#fff"/>
 
     </android.support.v4.widget.DrawerLayout>
 
