--- a/app/src/main/res/layout/activity_user_edit.xml
+++ b/app/src/main/res/layout/activity_user_edit.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="greenstory.rtg.com.UserActivity"
+    tools:context="greenstory.rtg.com.UserEditActivity"
     android:orientation="vertical">
     <!--TextView Scroll Layout-->
     <ScrollView
