--- a/app/src/main/res/layout/drawer_list_item.xml
+++ b/app/src/main/res/layout/drawer_list_item.xml
@@ -1,12 +1,12 @@
 
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/drawer_list_item"
+    android:id="@android:id/text1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:textAppearance="?android:attr/textAppearanceListItemSmall"
+    android:background="?android:attr/activatedBackgroundIndicator"
     android:gravity="center_vertical"
+    android:minHeight="?android:attr/listPreferredItemHeightSmall"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
-    android:textColor="#fff"
-    android:background="?android:attr/activatedBackgroundIndicator"
-    android:minHeight="?android:attr/listPreferredItemHeightSmall"/>
+    android:textAppearance="?android:attr/textAppearanceListItemSmall"
+    android:textColor="@color/rtgGreen" />
