--- a/app/src/main/res/layout/activity_users_options.xml
+++ b/app/src/main/res/layout/activity_users_options.xml
@@ -5,16 +5,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="greenstory.rtg.com.UsersOptionsActivity">
+    tools:context="greenstory.rtg.com.UsersOptionsActivity"
+    android:orientation="vertical">
+
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dip"
+            android:text="משפחת ישראלי"
+            android:textSize="22dip"
+            android:textStyle="bold"
+            android:textColor="#014B3E">
+
+        </TextView>
 
         <ListView
-
-
         android:id="@+id/list_Of_Options_To_Users"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
-
         </ListView>
 
 
