--- a/app/src/main/res/layout/activity_users_options_listview.xml
+++ b/app/src/main/res/layout/activity_users_options_listview.xml
@@ -3,12 +3,14 @@
 
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/label"
+    android:textDirection="rtl"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:padding="10dip"
-    android:textSize="16dip"
+    android:textSize="17dip"
     android:textStyle="bold"
-
-
+    android:textColor="#014B3E"
     >
+
+
 </TextView>
