--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#68b676</color>
+    <color name="colorPrimary">#014B3E</color>
+    <!-- original color: 68b676 -->
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#000000</color>
 </resources>
