--- a/app/src/main/res/layout/activity_users_options.xml
+++ b/app/src/main/res/layout/activity_users_options.xml
@@ -13,10 +13,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dip"
-            android:text="משפחת ישראלי"
-            android:textSize="22dip"
+            android:text="משפחת קורן"
+            android:textSize="@dimen/text_large"
             android:textStyle="bold"
-            android:textColor="#014B3E">
+            android:textColor="@color/rtgGreen">
 
         </TextView>
 
