preparing code for mockup presentations

--- a/app/src/main/res/layout/activity_users_options.xml
+++ b/app/src/main/res/layout/activity_users_options.xml
@@ -26,6 +26,13 @@
         android:layout_height="wrap_content">
         </ListView>
 
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="לחנות הוירטואלית"
+            android:textSize="@dimen/text_medium"
+            android:textColor="@color/rtgGreen"/>
+
 
 
 
