--- a/app/src/main/res/layout/activity_users_options_listview.xml
+++ b/app/src/main/res/layout/activity_users_options_listview.xml
@@ -7,9 +7,9 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:padding="10dip"
-    android:textSize="17dip"
+    android:textSize="@dimen/text_medium"
     android:textStyle="bold"
-    android:textColor="#014B3E"
+    android:textColor="@color/rtgGreen"
     >
 
 
