--- a/app/src/main/res/layout/activity_user_edit.xml
+++ b/app/src/main/res/layout/activity_user_edit.xml
@@ -205,6 +205,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:hint="שם"
+                    android:text="שם זמני"
                     android:layoutDirection="rtl"
                     android:textDirection="rtl"
                     android:textSize="@dimen/text_medium"
@@ -259,6 +260,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:hint="גיל"
+                    android:text=""
                     android:inputType="number"
                     android:layoutDirection="rtl"
                     android:textDirection="rtl"
@@ -279,6 +281,7 @@
                     android:layout_marginTop="16dp"
                     android:hint="גיל בן זוג"
                     android:inputType="number"
+                    android:text=""
                     android:layoutDirection="rtl"
                     android:textDirection="rtl"
                     android:textSize="@dimen/text_medium"
