--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="text_small">16sp</dimen>
     <dimen name="text_medium">20sp</dimen>
     <dimen name="text_large">24sp</dimen>
+    <dimen name="text_margin">16dp</dimen>
 </resources>
