--- a/app/src/main/res/drawable/splash.xml
+++ b/app/src/main/res/drawable/splash.xml
@@ -4,7 +4,7 @@
     <item android:drawable="@color/colorPrimary" />
 
     <item>
-        <bitmap android:src="@drawable/logo_rtg"
+        <bitmap android:src="@drawable/rtg_logo"
             android:gravity="center" />
 
     </item>
