added track starting from home screen

--- a/app/src/main/res/layout/activity_home_track_dialog.xml
+++ b/app/src/main/res/layout/activity_home_track_dialog.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="5dp"
-        android:text="אנא אשר גישה לGPS"
+        android:text="מידע על אתר"
         android:textSize="25sp"
         android:textStyle="bold" />
 
