--- a/app/src/main/res/drawable/splash.xml
+++ b/app/src/main/res/drawable/splash.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@color/colorPrimary" />
+    <item android:drawable="@color/white" />
 
     <item>
-        <bitmap android:src="@drawable/rtg_logo"
+        <bitmap android:src="@drawable/rtg_logo_colorful"
             android:gravity="center" />
 
     </item>
