--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,11 +1,11 @@
-<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
+<FrameLayout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     tools:context="greenstory.rtg.com.MapsActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
 
-        <TextView
+        <!--<TextView
             android:id="@+id/tv_questions_answered"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -14,28 +14,23 @@
             android:layout_above="@id/btn_take_picture"
             android:textSize="@dimen/text_medium"
             android:textAlignment="center"
-            android:textColor="@color/rtgGreen" />
-
-        <Button
-            android:id="@+id/btn_take_picture"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:padding="6dp"
-            android:text="צלם תמונה ושתף"
-            android:textAlignment="center"
-            android:textColor="@color/rtgGreen"
-            android:textSize="@dimen/text_medium" />
+            android:textColor="@color/rtgGreen" />-->
 
         <fragment
             android:id="@+id/map"
             android:name="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@id/tv_questions_answered"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
-</RelativeLayout>
+        <ImageButton
+            android:id="@+id/btn_take_picture"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|right"
+            android:src="@drawable/camera_36"
+            android:layout_margin="15dp"
+            android:background="@null"/>
+
+</FrameLayout>
