--- a/app/src/main/res/layout/activity_users_options.xml
+++ b/app/src/main/res/layout/activity_users_options.xml
@@ -28,11 +28,11 @@
         android:layout_height="wrap_content">
         </ListView>
 
-        <Button
+        <!--<Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="לחנות הוירטואלית"
             android:textSize="@dimen/text_medium"
-            android:textColor="@color/rtgGreen"/>
+            android:textColor="@color/rtgGreen"/>-->
 
 </LinearLayout>
