--- a/app/src/main/res/layout/activity_user_edit.xml
+++ b/app/src/main/res/layout/activity_user_edit.xml
@@ -7,185 +7,9 @@
     tools:context="greenstory.rtg.com.UserEditActivity"
     android:orientation="vertical">
 
-    <!--TextView Scroll Layout-->
-    <ScrollView
-        android:id="@+id/textViewLayout"
-        android:visibility="visible"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:orientation="vertical">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/tv_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_margin="16dp"
-                    android:layoutDirection="rtl"
-                    android:text="שם:"
-                    android:textDirection="rtl"
-                    android:textSize="@dimen/text_medium"
-                    android:textColor="@color/rtgGreen"
-                    android:visibility="visible" />
-
-                <TextView
-                    android:id="@+id/tv_name_value"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:layout_toLeftOf="@id/tv_name"
-                    android:textSize="@dimen/text_medium"
-                    android:textColor="@color/rtgGreen"
-                    android:visibility="visible" />
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/tv_familyName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_margin="16dp"
-                    android:layoutDirection="rtl"
-                    android:text="שם משפחה:"
-                    android:textDirection="rtl"
-                    android:textSize="@dimen/text_medium"
-                    android:textColor="@color/rtgGreen"
-                    android:visibility="visible" />
-
-                <TextView
-                    android:id="@+id/tv_familyName_value"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:layout_toLeftOf="@id/tv_familyName"
-                    android:textSize="@dimen/text_medium"
-                    android:textColor="@color/rtgGreen"
-                    android:visibility="visible" />
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/tv_partnerName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_margin="16dp"
-                    android:layoutDirection="rtl"
-                    android:text="בן זוג:"
-                    android:textDirection="rtl"
-                    android:textSize="@dimen/text_medium"
-                    android:textColor="@color/rtgGreen"
-                    android:visibility="visible" />
-
-                <TextView
-                    android:id="@+id/tv_partnerName_value"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:layout_toLeftOf="@id/tv_partnerName"
-                    android:textSize="@dimen/text_medium"
-                    android:textColor="@color/rtgGreen"
-                    android:visibility="visible" />
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/tv_age"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_margin="16dp"
-                    android:layoutDirection="rtl"
-                    android:text="גיל:"
-                    android:textDirection="rtl"
-                    android:textSize="@dimen/text_medium"
-                    android:textColor="@color/rtgGreen"
-                    android:visibility="visible" />
-
-                <TextView
-                    android:id="@+id/tv_age_value"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:layout_toLeftOf="@id/tv_age"
-                    android:textSize="@dimen/text_medium"
-                    android:textColor="@color/rtgGreen"
-                    android:visibility="visible" />
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/tv_partnerAge"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_margin="16dp"
-                    android:layoutDirection="rtl"
-                    android:text="גיל בן זוג:"
-                    android:textDirection="rtl"
-                    android:textSize="@dimen/text_medium"
-                    android:textColor="@color/rtgGreen"
-                    android:visibility="visible" />
-
-                <TextView
-                    android:id="@+id/tv_partnerAge_value"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:layout_toLeftOf="@id/tv_partnerAge"
-                    android:textSize="@dimen/text_medium"
-                    android:textColor="@color/rtgGreen"
-                    android:visibility="visible" />
-
-            </RelativeLayout>
-        </LinearLayout>
-    </ScrollView>
-
-
     <!--EditText Scroll Layout-->
     <ScrollView
         android:id="@+id/editTextLayout"
-        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -204,8 +28,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
-                    android:hint="שם"
-                    android:text="שם זמני"
+                    android:hint="שם פרטי"
                     android:layoutDirection="rtl"
                     android:textDirection="rtl"
                     android:textSize="@dimen/text_medium"
@@ -237,24 +60,6 @@
                 android:orientation="horizontal">
 
                 <EditText
-                    android:id="@+id/et_partnerName"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:hint="בן זוג"
-                    android:layoutDirection="rtl"
-                    android:textDirection="rtl"
-                    android:textSize="@dimen/text_medium"
-                    android:textColor="@color/rtgGreen"/>
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <EditText
                     android:id="@+id/et_age"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -268,6 +73,26 @@
                     android:textColor="@color/rtgGreen"/>
 
             </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <EditText
+                    android:id="@+id/et_partnerName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:hint="בן זוג"
+                    android:layoutDirection="rtl"
+                    android:textDirection="rtl"
+                    android:textSize="@dimen/text_medium"
+                    android:textColor="@color/rtgGreen"/>
+
+            </RelativeLayout>
+
+
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -319,7 +144,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="עריכה"
+        android:text="סיום"
         android:textSize="22sp"/>
 
 </LinearLayout>
