--- a/app/src/main/res/layout/activity_users_options.xml
+++ b/app/src/main/res/layout/activity_users_options.xml
@@ -1,4 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/users_drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -28,11 +33,28 @@
         android:layout_height="wrap_content">
         </ListView>
 
-        <!--<Button
-            android:layout_width="match_parent"
+        <Button
+            android:id="@+id/btn_edit_user"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="לחנות הוירטואלית"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:text="עריכה"
             android:textSize="@dimen/text_medium"
-            android:textColor="@color/rtgGreen"/>-->
+            android:textColor="@color/rtgGreen"/>
 
 </LinearLayout>
+
+        <ListView
+            android:id="@+id/users_left_drawer_list"
+            android:layout_width="200dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:choiceMode="singleChoice"
+            android:divider="@android:color/transparent"
+            android:dividerHeight="0dp"
+            android:background="#fff"/>
+
+</android.support.v4.widget.DrawerLayout>
+
+
