editing users options ui and logic

--- a/app/src/main/res/layout/activity_home_dialog_login.xml
+++ b/app/src/main/res/layout/activity_home_dialog_login.xml
@@ -44,10 +44,11 @@
 
     <Button
         android:id="@+id/btnLogin"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:background="@color/colorAccent"
-        android:text="Login"
+        android:layout_gravity="center"
+        android:text="להרשמה"
         android:textColor="@android:color/white" />
 </LinearLayout>
